--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'vcloud'
 
 include 'datasource'
 include 'core'
+include 'common'
 include 'gateway'
 include 'auth'
 include 'service:admin'
