1. add logAspect 2. menu api

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -15,3 +15,8 @@ spring:
     property-naming-strategy: SNAKE_CASE
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 20MB
+      max-request-size: 100MB
