--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,9 +4,11 @@ dependencies {
     api libs.get('httpmime')
     api libs.get('okhttp')
     api libs.get('fastjson')
+    api libs.get('jackson')
     api libs.get('java-jwt')
     api libs.get('jjwt')
     api libs.get('jjwt-impl')
+    api libs.get('jjwt-jackson')
     api libs.get('commons-text')
     api libs.get('commons-io')
     api libs.get('commons-fileupload')
