--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     api libs.get('httpmime')
     api libs.get('okhttp')
     api libs.get('fastjson')
+    api libs.get('fastjson-ext')
     api libs.get('jackson')
     api libs.get('java-jwt')
     api libs.get('jjwt')
@@ -12,4 +13,9 @@ dependencies {
     api libs.get('commons-text')
     api libs.get('commons-io')
     api libs.get('commons-fileupload')
+    api libs.get('wx-miniapp')
+    api libs.get('wx-mp')
+    api libs.get('wx-cp')
+    api libs.get('wx-open')
+    api libs.get('wx-miniapp')
 }
