--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-SpringBootVersion=2.6.11
-springCloudVersion=2021.0.4
+SpringBootVersion=2.6.14
+springCloudVersion=2021.0.5
 springCloudAlibabaVersion=2021.0.4.0
-DependencyManagement=1.0.13.RELEASE
-RedissonVersion=3.17.6
+DependencyManagement=1.1.0
+RedissonVersion=3.18.0
