--- a/version.gradle
+++ b/version.gradle
@@ -1,35 +1,35 @@
 ext {
     versions = [
-            fastjson         : '2.0.14',
-            jackson          : '2.13.4',
-            commonsText      : '1.9',
-            mysql            : '8.0.30',
+            fastjson         : '2.0.20',
+            jackson          : '2.14.1',
+            commonsText      : '1.10.0',
+            mysql            : '8.0.31',
             xxlJob           : '2.3.1',
-            mybatis          : '2.2.2',
+            mybatis          : '3.0.0',
             mybatisPlus      : '3.5.2',
-            cosid            : '1.14.6',
-            httpmime         : '4.5.13',
-            hutool           : '5.8.7',
+            cosid            : '1.16.8',
+            httpmime         : '4.5.14',
+            hutool           : '5.8.10',
             commonsFileupload: '1.4',
             commonsPool      : '2.11.1',
             commonsIo        : '2.11.0',
             okhttp           : '4.10.0',
             guava            : '31.1-jre',
             validator        : '8.0.0.Final',
-            easyexcel        : '3.1.1',
-            javaJwt          : '4.0.0',
+            easyexcel        : '3.1.3',
+            javaJwt          : '4.2.1',
             jjwt             : '0.11.5',
-            caffeine         : '3.1.1',
+            caffeine         : '3.1.2',
             wxJava           : '4.4.0',
-            saToken          : '1.31.0',
-            ttl              : '2.14.1'
+            saToken          : '1.33.0',
+            ttl              : '2.14.2'
     ]
 
     libs = [
             'fastjson'          : "com.alibaba.fastjson2:fastjson2:${versions.fastjson}",
             'fastjson-ext'      : "com.alibaba.fastjson2:fastjson2-extension:${versions.fastjson}",
             'jackson'           : "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
-            'mysql'             : "mysql:mysql-connector-java:${versions.mysql}",
+            'mysql'             : "com.mysql:mysql-connector-j:${versions.mysql}",
             'xxl-job'           : "com.xuxueli:xxl-job-core:${versions.xxlJob}",
             'mybatis'           : "org.mybatis.spring.boot:mybatis-spring-boot-starter:${versions.mybatis}",
             'mybatis-plus'      : "com.baomidou:mybatis-plus-boot-starter:${versions.mybatisPlus}",
