--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-SpringBootVersion=2.6.14
-springCloudVersion=2021.0.5
-springCloudAlibabaVersion=2021.0.4.0
+SpringBootVersion=3.0.1
+SpringCloudVersion=2022.0.0
+SpringCloudAlibabaVersion=2022.0.0.0-RC1
 DependencyManagement=1.1.0
-RedissonVersion=3.18.0
+RedissonVersion=3.19.1
+GraalVersion=0.9.18
