--- a/doc/nacos/redis-dev.yml
+++ b/doc/nacos/redis-dev.yml
@@ -38,3 +38,32 @@ spring:
         nettyHook: !<org.redisson.client.DefaultNettyHook> {}
         useThreadClassLoader: true
         addressResolverGroupFactory: !<org.redisson.connection.DnsAddressResolverGroupFactory> {}
+
+
+#cosid:
+#  namespace: ${spring.application.name}
+#  segment:
+#    enabled: true
+#    mode: chain
+#    chain:
+#      safe-distance: 5
+#      prefetch-worker:
+#        core-pool-size: 2
+#        prefetch-period: 1s
+#    distributor:
+#      type: redis
+#    share:
+#      offset: 100
+#      step: 10
+#      converter:
+#        type: to_string
+#    provider:
+#      log:
+#        offset: 0
+#        step: 10
+#      converter:
+#        prefix: log_
+#        type: to_string
+#        radix:
+#          pad-start: true
+#          char-size: 19
