--- a/doc/nacos/user-dev.yml
+++ b/doc/nacos/user-dev.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/app?characterEncoding=UTF-8&useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/vc_user?characterEncoding=UTF-8&useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      pool-name: vc-user
+      pool-name: vc_user
       maximum-pool-size: 15
       max-lifetime: 850000
       validation-timeout: 1000
