feign add same-token 服务间调用认证

--- a/doc/nacos/application-dev.yml
+++ b/doc/nacos/application-dev.yml
@@ -25,7 +25,7 @@ spring:
       client:
         config:
           default:
-            logger-level: none
+            logger-level: full
             connect-timeout: 3000
             read-timeout: 10000
       compression:
