--- a/doc/nacos/user-dev.yml
+++ b/doc/nacos/user-dev.yml
@@ -14,6 +14,12 @@ spring:
       connection-test-query: select 1
   jpa:
     open-in-view: false
+  flyway:
+    enabled: true
+    locations:
+      - classpath:db/migration
+    clean-disabled: true
+    baseline-on-migrate: false
 
 mybatis-plus:
   configuration:
