redisson编解码器改为Kryo5Codec

--- a/doc/nacos/redis-dev.yml
+++ b/doc/nacos/redis-dev.yml
@@ -24,7 +24,7 @@ spring:
           dnsMonitoringInterval: 5000
         threads: 16
         nettyThreads: 32
-        codec: !<org.redisson.codec.MarshallingCodec> {}
+        codec: !<org.redisson.codec.Kryo5Codec> {}
         referenceEnabled: true
         transportMode: "NIO"
         lockWatchdogTimeout: 30000
