--- a/service/mq/src/main/resources/bootstrap.yml
+++ b/service/mq/src/main/resources/bootstrap.yml
@@ -19,5 +19,10 @@ spring:
           - data-id: application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
             group: DEFAULT_GROUP
             refresh: true
+        extension-configs:
+          - data-id: ${spring.application.name}-dtp-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+            group: DEFAULT_GROUP
+            refresh: true
+        refresh-enabled: true
   profiles:
     active: dev
